samples/_failures_safe/1761268500_3e607d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c67fb98f.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_c67fb98f.c:167: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_c67fb98f.c:166:5: error: expected declaration or statement at end of input
  166 |     if
      |     ^~
